# SdlGenericGame

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  Config.h.in  GenericModule.cc  GenericModule.h  SdlGenericGame.cc
test/: CMakeLists.txt  GenericModuleTest.cc
